          opening hours value and replace with Dublin Core "available" term.
        * Replace unnecessary instances of rdf:ID with rdf:nodeID.
        * Model relationship of neighborhood to parent city.
        * Reduce acres of whitespace in output and clean up indenting.
        Added a Universal Edit Link (http://universaleditbutton.org/) (#254)

0.62    8 June 2008
        Allow wiki page links (simple: [[Foo]], title: [[Foo|bar]]) in
          change summaries.
        Ensure that all modules we ship are versioned.
        Added experimental support for local IP blacklisting modules; see the
          display_node method in "perldoc OpenGuides" for details.
        Don't include redirect pages in search results. (#24)
        Include map link URLs in RDF output. (#26)
        Hide historic versions of nodes from search engines. (#207)
        Install signal handlers in reindex.pl and CGI scripts to allow
          temporary files (eg from Plucene) to be cleaned up. (#247)

0.61    4 July 2007
        Added experimental support for local spam detection modules; see the
          commit_node method in "perldoc OpenGuides" for details.
        Added extra "edit this page" link next to the node name; if you don't
          want it, add div#title_edit_link {display:none;} to your stylesheet.
        Removed dependency on Test::MockObject.
        Remove misleading CSS examples
        Support alternative database ports (#165)
        Only display the google maps preference if node maps are enabled
          (#192).
        Respect redirect=0 (#104).
        If an unknown action is supplied to wiki.cgi, redirect to
          action=display (partial fix for #102)
        Added new div#nonexistent_node_message for displaying message when
          someone tries to view a nonexistent node.
        Validate input geodata (#22)
        List all contributors in RDF version of nodes (#106).
        The "Look for nearby geocaches" preference and link now actually work